Fix deprecated Java API usages (#202)
These Java APIs have been deprecated and may get removed in a future Java version.

Signed-off-by: Wouter Born <github@maindrain.net>